--- a/src/scss/06_components/navigation/global/_menu-toggle.scss
+++ b/src/scss/06_components/navigation/global/_menu-toggle.scss
@@ -29,7 +29,7 @@ $-menu-transition-duration: 0.3s;
 }
 
 .mega-and-mobilemenu .block--language-switcher,
-.mega-and-mobilemenu .jsmenu__panel-footer {
+.mega-and-mobilemenu .mmenu__panel-footer {
   @include breakpoint($breakpoint-l) {
     display: none;
   }
@@ -47,7 +47,7 @@ $-menu-transition-duration: 0.3s;
   }
 
   .mega-and-mobilemenu .block--language-switcher,
-  .mega-and-mobilemenu .jsmenu__panel-footer {
+  .mega-and-mobilemenu .mmenu__panel-footer {
     display: none;
   }
 }
@@ -184,8 +184,8 @@ $-menu-transition-duration: 0.3s;
   transition: none;
 }
 
-.jsmenu__language {
-  display: none; // Hides jsmenu language bar during navigation
+.mmenu__language {
+  display: none; // Hides mmenu language bar during navigation
 }
 
 // What should happen when menu is opened
@@ -205,7 +205,7 @@ $-menu-transition-duration: 0.3s;
     }
   }
 
-  & ~ * .jsmenu__language {
+  & ~ * .mmenu__language {
     @include breakpoint(max-width $breakpoint-m) {
       display: block;
     }
