UHF-6017: Simplify mmenu CSS classes

--- a/src/scss/06_components/navigation/global/_menu-toggle.scss
+++ b/src/scss/06_components/navigation/global/_menu-toggle.scss
@@ -29,7 +29,7 @@ $-menu-transition-duration: 0.3s;
 }
 
 .mega-and-mobilemenu .block--language-switcher,
-.mega-and-mobilemenu .mmenu__panel-footer {
+.mega-and-mobilemenu .mmenu__footer {
   @include breakpoint($breakpoint-l) {
     display: none;
   }
@@ -47,7 +47,7 @@ $-menu-transition-duration: 0.3s;
   }
 
   .mega-and-mobilemenu .block--language-switcher,
-  .mega-and-mobilemenu .mmenu__panel-footer {
+  .mega-and-mobilemenu .mmenu__footer {
     display: none;
   }
 }
