--- a/templates/block/block--mobile-navigation.html.twig
+++ b/templates/block/block--mobile-navigation.html.twig
@@ -58,7 +58,7 @@
 
           {{ block_content }}
 
-          <div class="mmenu__panel-footer js-mmenu__panel-footer">
+          <div class="mmenu__footer js-mmenu__footer">
 
             {% set inside_cssmenu = true %}
             {{ drupal_entity('block', 'headertopnavigation')}}
