UHF-6136: Creaated a reusable component 'metadata wrapper' and added styles for it

--- a/src/scss/06_components/__index.scss
+++ b/src/scss/06_components/__index.scss
@@ -9,6 +9,7 @@
 @import 'eu-cookie-compliance-banner';
 @import 'gin-toolbar';
 @import 'logo';
+@import 'metadata-wrapper';
 @import 'tags';
 @import 'throbber';
 @import 'editorially';
